修改了配置文件的一点小问题。 20240110

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
     ],
     "clangd.arguments": [
         "--background-index",
-        "--compile-commands-dir=${workspaceFolder}/build",
+        "--compile-commands-dir=${workspaceFolder}",
         "--all-scopes-completion",
         "--completion-style=detailed",
         "--clang-tidy",
